[package]
name = "twee-parser"
version = "0.1.4"
edition = "2021"
license = "MPL-2.0"
description = "A parser for Twine stories"
exclude = [
    "test-data/*",
    "examples/*.twee",
    "examples/*.html",
]
keywords = ["twine", "twee", "twee-v3"]
categories = ["parser-implementations"]
repository = "https://github.com/tareksander/twine-rs"

[dependencies]

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
regex = "1.10.3"
xmltree = { version = "0.10.3", optional = true }
thiserror = "1.0.56"

[features]
html = ["dep:xmltree"]

[package.metadata.docs.rs]
all-features = true

