[package]
name = "twee-tools"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A compiler for Twine stories"
exclude = [
    
]
keywords = ["twine", "gamedev"]
categories = ["game-development"]
repository = "https://github.com/tareksander/twine-rs"

[dependencies]

twee-parser = { path = "../twee-parser", features = ["html"] }


[[bin]]
name = "twee"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
